# text2sql

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  flow.py  main.py  nodes.py  pyproject.toml  pytest.ini  run_tests.py  test_system.py
db/: milvus.py  mysql_connector.py
docs/: MILVUS_SETUP.md  OLLAMA_SETUP.md  design.md
test/: README.md  __init__.py  conftest.py  test_milvus_basic_operations.py  test_milvus_connection.py  test_milvus_rag_integration.py  test_nomic_embedding.py
utils/: call_llm.py  milvus_lite.py  mysql_connector.py  sql_validator.py
