[project]
name = "text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.93.0",
    "pocketflow>=0.0.1",
    "pydantic>=2.11.7",
    "pymilvus>=2.5.11",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]
