[project]
name = "text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "ollama>=0.1.0",
    "openai>=1.93.0",
    "pocketflow>=0.0.1",
    "pydantic>=2.11.7",
    "pymilvus>=2.3.0",
    "pymysql>=1.1.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.41",
]
